Fix accessibility main problems (aria-label for footer icons, contrast, font size and weight, links style)

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -219,7 +219,6 @@ a:hover {
 
 .d-bloc .panel .a-btn,
 .l-bloc .a-btn,
-.l-bloc .navbar a,
 .l-bloc .navbar-brand,
 .l-bloc a .icon-sm,
 .l-bloc a .icon-md,
@@ -237,8 +236,6 @@ a:hover {
 
 .d-bloc .panel .a-btn:hover,
 .l-bloc .a-btn:hover,
-.l-bloc .navbar a:hover,
-.l-bloc .navbar-brand:hover,
 .l-bloc a:hover .icon-sm,
 .l-bloc a:hover .icon-md,
 .l-bloc a:hover .icon-lg,
@@ -650,8 +647,7 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757 !important;
@@ -757,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(110, 100, 70, 0.8);
     padding: 40px 40px 40px 40px;
 }
 
@@ -775,15 +771,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #f3976c;
+    background-color: #bd5728;
 }
 
 .tc-white {
-    color: #f3976c !important;
+    color: #dcdc18 !important;
+    font-weight: 700;
+}
+
+h1.tc-white {
+    letter-spacing: 0.3em;
 }
 
 .btn-atomic-tangerine {
-    background: #f3976c;
+    background: #bd5728;
     color: #ffffff !important;
 }
 
@@ -1053,4 +1054,27 @@ footer {
 #map {
     height: 300px;
     margin-bottom: 20px;
+}
+
+a {
+    color: #bd5728;
+}
+
+a:hover,
+a:focus {
+    color: #bd5728;
+    -webkit-filter: contrast(150%) !important;
+    filter: contrast(150%) !important;
+}
+
+.navbar-nav--link {
+    color: #bd5728;
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+
+.navbar-brand img:hover,
+.navbar-nav--link:hover {
+    -webkit-filter: contrast(150%) !important;
+    filter: contrast(150%) !important;
 }
